# transcribe-mlx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
app/: cli.py  inference.py
